# unofficial-fan-videogame-baseball-club

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: c-cpp.yml
money_and_players/: CMakeLists.txt  game_data.h  player_data.h  team_data.h
scheduling/: CMakeLists.txt  game_data.h  league_scheduler.cpp  league_scheduler.h  league_scheduler_2.cpp  league_scheduler_2.h  main.cpp  team_data.h
scheduling/archived/: league_scheduler.h  league_scheduler_2_ARCHIVED.cpp
